[project]
name = "lang-ecosystem"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Juan Carvalho Silva",email = "antonioxp.8@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langsmith (>=0.4.23,<0.5.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pytest = "^8.4.1"

